apps/generic/overlays/qdrant/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
spec:
  ports:
    - name: http
      port: 6333
      protocol: TCP
      targetPort: http
